fix the checkbox alignment when placed inside a table cell

--- a/src/Resources/public/css/ns.css
+++ b/src/Resources/public/css/ns.css
@@ -341,3 +341,6 @@ td > div.help-block {
     display: block !important;
 }
 
+td > div.checkbox label {
+    margin-left: -10px;
+}
